force-app/main/default/objects/Purchase_Order__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>