force-app/main/default/objects/Purchase_Order__c/fields/Course_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrolled__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Enrolled</label>
    <referenceTo>Course_Enrolled__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>