force-app/main/default/objects/Purchase_Order__c/fields/EF_Status__c.field-meta.xml
<CustomField>
    <fullName>EF_Status__c</fullName>
    <label>EF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EF_Status</valueSetName>
    </valueSet>
</CustomField>