force-app/main/default/objects/Purchase_Order__c/fields/enrollment_status__c.field-meta.xml
<CustomField>
    <fullName>enrollment_status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>