force-app/main/default/objects/Purchase_Order__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>