force-app/main/default/objects/Purchase_Order__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>