force-app/main/default/objects/Purchase_Order__c/fields/Net_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Payable_Amount__c</fullName>
    <formula>Total_Amount__c - Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>