force-app/main/default/objects/Purchase_Order__c/fields/Purchase_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Date__c</fullName>
    <label>Purchase Order Date</label>
    <type>Date</type>
</CustomField>