force-app/main/default/objects/Purchase_Order__c/fields/Purchase_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Id__c</fullName>
    <label>Purchase Order Id</label>
    <type>TextArea</type>
</CustomField>