force-app/main/default/objects/Purchase_Order__c/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount__c</fullName>
    <formula>Net_Payable_Amount__c -  Total_Payment_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>