force-app/main/default/objects/Purchase_Order__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>