force-app/main/default/objects/Purchase_Order__c/fields/Total_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Received__c</fullName>
    <label>Total Payment Received</label>
    <summarizedField>Transcation__c.Payment__c</summarizedField>
    <summaryFilterItems>
        <field>Transcation__c.Status__c</field>
        <operation>equals</operation>
        <value>Received</value>
    </summaryFilterItems>
    <summaryForeignKey>Transcation__c.Purchase_Orders__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>