force-app/main/default/objects/Purchase_Order__c/validationRules/total_payment_amount_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>total_payment_amount_validation</fullName>
    <active>false</active>
    <errorConditionFormula>Total_Payment_Received__c &gt; Net_Payable_Amount__c</errorConditionFormula>
    <errorMessage>Total Payment Received must be equal to Net Payable Amount.</errorMessage>
</ValidationRule>