force-app/main/default/objects/Purchase_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Discount_Amount__c</columns>
    <columns>Lead__c</columns>
    <columns>Purchase_Order_Date__c</columns>
    <columns>Purchase_Order_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>