force-app/main/default/objects/Purchase_Order__c/listViews/Delhi_Public_Queue_Purchase_Order.listView-meta.xml
<ListView>
    <fullName>Delhi_Public_Queue_Purchase_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>Delhi Public Queue</label>
    <queue>Delhi_Public_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>