force-app/main/default/objects/Purchase_Order__c/listViews/Public_Queue_Purchase_Order.listView-meta.xml
<ListView>
    <fullName>Public_Queue_Purchase_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>Public Queue</label>
    <queue>Public_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>